2011-07-04 Jesse Kornblum

	* Fixed minor bugs regarding wide characters in 
	  is_device_file on Win32


2011-06-15 Jesse Kornblum

	* Added warning message for programs running under WoW64

	* Fixed cosmetic error in hashdeep, bug 3313963.


2011-05-23 Jesse Kornblum

	* Resolved bug 3307444 regarding the prefix type for multipliers.
	  We're using IEC multipliers. Also, spelled multipliers
	  correctly.

	* Fixed a bug in find_bsd_hash, bug 3309339, to address when
	  a file of known hashes has a set of parenthesis. The
	  find_bsd_hash function was munging the line.


2011-04-23 Jesse Kornblum

	* More cosmetic changes, this time to print correct offsets
	  for a zero-byte file being processed from stdin in piecewise
	  mode.


2011-04-22 Jesse Kornblum

	* Cosmetic bug fix in hash.c to avoid calling ftell
	  when processing standard input.


2011-04-21 Jesse Kornblum

	* Released version 3.9 with critical bug fix, 3290190.

	* Added hashdeep64.exe to the CLEANFILES


2011-04-20 Jesse Kornblum

	* Version bump to 3.9-001

	* Added int _CRT_fmode = _O_BINARY; to hashdeep/main.c
	  to address bug 3290190, regarding processing stdin
	  in hashdeep.


2011-04-01 Jesse Kornblum

	* Version bump to 3.8-002

	* Experimenting with x64 compilation. Changed _tprintf calls
	  in md5deep/display.c to regular printf to fix problem with
	  missing displayed data.

	* Commented out definition of _WIN32_WINNT in tchar-local.h.
	  The x64 compiler seems to have this already for us.

	* Attempting to compile with x84_64-w64-mingw32 compiler.


2011-03-22 Jesse Kornblum

	* Version bump to 3.8-001

	* Fixed cosmetic bug for -p mode, SF bug 3234714.


2010-12-15 Jesse Kornblum

	* Re-engineered how file sizes and reads are computed.
	  The inital guess of a file's size, via stat(2), is
	  now stat_bytes (and stat_megs). For each call of hash(),
	  we record the offset where we started, read_start, and
	  the offset where we ended, read_end. These mostly are for